--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -193,8 +193,8 @@
 	\usetikzlibrary{decorations.pathreplacing}
 	\usetikzlibrary{automata,positioning}
 	\usetikzlibrary{math}
-	\usetikzlibrary{fadings}
-	\tikzset{>=stealth}
+	\usetikzlibrary{fadings,shadings}
+	\tikzset{>=latex}
 
 \usepackage[european,
 	american inductors,
