Ajout flux chaleur schema
Debut QTA, Qcond,x Qcond,r

--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -195,6 +195,7 @@
 	\usetikzlibrary{math}
 	\usetikzlibrary{fadings,shadings}
 	\tikzset{>=latex}
+	\tikzset{arw/.style={>={Triangle[length=3mm,width=5mm]},line width=2mm,draw=gray}}
 
 \usepackage[european,
 	american inductors,
