--- a/fig/fig_Schema_FluxThermiquesNoyau_Gaelle/tex/fig_Schema_FluxThermiquesNoyau_Gaelle.tex
+++ b/fig/fig_Schema_FluxThermiquesNoyau_Gaelle/tex/fig_Schema_FluxThermiquesNoyau_Gaelle.tex
@@ -7,25 +7,39 @@
 	\def\AHXnorth{\Lreg,\Ryreg};
 	\def\AHXsouth{\Lreg,-\Ryreg};
 	
-% ---------------------------------------------------
+% --------------------------------------------------- Fond de schéma
 \fill[MatlabBlue,opacity=.5] (\CHXnorth) arc [start angle=90, end angle=270, x radius=\Rxreg, y radius=\Ryreg] -- cycle;
 \draw[dotted, ->, very thick] ({-1.5*\Rxreg},0) -- ({\Lreg+1.5*\Rxreg},0) node [above] {$\mathbf e_x$};
 \fill[MatlabBlue,opacity=.5] (\CHXnorth) arc [start angle=90, end angle=-90, x radius=\Rxreg, y radius=\Ryreg] -- cycle;
-\draw[dotted, ->, very thick] ($(\CHXsouth)+(0,-.3*\Ryreg)$) -- ($(\CHXnorth)+(0,.3*\Ryreg)$) node [right] {$\mathbf e_r$};
+\draw[dotted, ->, very thick] ($(\CHXsouth)+(0,-.3*\Ryreg)$) -- ($(\CHXnorth)+(0,.3*\Ryreg)$) node [left] {$\mathbf e_r$};
 
 \draw[dashed, very thick] (\AHXnorth) arc [start angle=90, end angle=270, x radius=\Rxreg, y radius=\Ryreg];
 \filldraw[fill=MatlabBlue, fill opacity=.5, draw=black,very thick] (\CHXnorth) arc [start angle=90, end angle=-90, x radius=\Rxreg, y radius=\Ryreg] -- (\AHXsouth) arc [start angle=-90, end angle=90, x radius=\Rxreg, y radius=\Ryreg] --cycle;
 \draw[very thick] (\CHXnorth) arc [start angle=90, end angle=270, x radius=\Rxreg, y radius=\Ryreg];
 	
-% ---------------------------------------------------
-\draw (\CHXnorth) node [above left] {\'Echangeur froid};
-\draw (\AHXnorth) node [above right] {\'Echangeur ambiant};
+% --------------------------------------------------- Dimensions
+\draw (\CHXnorth) node [above right] {\begin{tabular}{ll}\'Echangeur \\  froid\end{tabular}};
+\draw (\AHXnorth) node [above left] {\begin{tabular}{rr}\'Echangeur \\ ambiant \end{tabular}  };
 
 \draw (0,0) node[below left] {0};
 \draw (\Lreg,0) node{|} node[below] {$L_{\sf reg}$};
 \draw (\CHXnorth) -- ++(-.5cm,0) node[left] {$R_{\sf reg}$};
 
+% --------------------------------------------------- Flux thermiques
+%%% Q_TA
+\draw[arw,->,draw=MatlabBlue] ({.2*\Lreg},0) -- ++(.33*\Lreg,0) node[right] {$Q_{TA}$};
 
-	
-% ---------------------------------------------------
+%%% Q_cond
+\draw[arw,<-,draw=MatlabOrange] ({.4*\Lreg},.25*\Ryreg) node[left] {$Q_{\sf cond}^{(x)}$} -- ++(.33*\Lreg,0);
+\draw[arw,<-,draw=MatlabOrange] ({.4*\Lreg},-.25*\Ryreg) node[left] {$Q_{\sf cond}^{(x)}$} -- ++(.33*\Lreg,0);
+
+\draw[arw,->,draw=MatlabYellow] ({.5*\Lreg},.3*\Ryreg)  -- (.5*\Lreg,.8*\Ryreg) node[above] {$Q_{\sf cond}^{(r)}$};
+\draw[arw,->,draw=MatlabYellow] ({.5*\Lreg},-.3*\Ryreg)  -- (.5*\Lreg,-.8*\Ryreg) node[below] {$Q_{\sf cond}^{(r)}$};
+
+%%% Q_visq
+
+%%% Q_vort
+
+
+
 \end{tikzpicture}
