--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -56,6 +56,7 @@
 \usepackage[french]{babel}
 \usepackage{csquotes}
 \usepackage{wrapfig}
+\usepackage{multicol}
 \usepackage{float}
 % -----------------------------------------------------
 \usepackage[dvipsnames]{xcolor}
